# pyharp

./: .gitignore  CMakeLists.txt  README.md  configure.h.in  requirements.txt
cmake/: compilers.cmake  gtest.cmake  parameters.cmake  pydisort.cmake
cmake/macros/: macro_setup_problem.cmake  macro_setup_test.cmake
cmake/modules/: FindNetCDF.cmake
data/: h2so4.txt  s8_k_fuller.txt
doc/: DISORT2.doc  README_cdisort
examples/: CMakeLists.txt  aerosol_output_data.txt  amars_lw.cpp  amars_rt.cpp  amars_sw.cpp  amarsw-ck.yaml  amarsw-lbl.yaml
src/: CMakeLists.txt  add_arg.h  constants.h  index.h  radiation.hpp  radiation_band.hpp  registry.cpp  registry.hpp
src/math/: interpn.h  interpolation.hpp  locate.h  math_dispatch.cpp
src/opacity/: CMakeLists.txt  absorber.cpp  absorber.hpp  absorber_factory.hpp_  absorber_rfm.cpp  absorber_rfm.cpp_  atm_to_standard_grid.cpp  atm_to_standard_grid.hpp  attenuator.cpp  attenuator.hpp  attenuator_options.hpp  h2so4_simple.cpp  h2so4_simple.hpp  hitran_absorber.cpp  hydrogen_cia.cpp_  hydrogen_cia.hpp  interp_attenuator.cpp  rfm.cpp  rfm.hpp  s8_fuller.cpp  s8_fuller.hpp
src/radiation/: CMakeLists.txt  radiation.cpp  radiation.hpp  radiation_band.cpp  radiation_band.hpp  radiation_utils.cpp  radiation_utils.hpp  set_spectral_properties.cpp
src/rtsolver/: CMakeLists.txt  disort.cpp  disort_impl.h  rt_solver_disort.cpp_  rtsolver.hpp  rtsolver_dispatch.cpp
src/rtsolver/cdisort213/: CMakeLists.txt  DISORT2.doc  HOWTO_cdisort  Makefile_cdisort  README_cdisort  cdisort.c  cdisort.h  locate.c  locate.h
src/utils/: CMakeLists.txt  fileio.cpp  fileio.hpp  find_resource.cpp  find_resource.hpp  interp.hpp  layer2level.cpp  layer2level.hpp  parse_radiation_direction.cpp  read_weights.cpp  read_weights.hpp  report_disort.cpp  report_disort.hpp  scattering_moment.cpp  scattering_moment.hpp  scattering_moments.cpp  scattering_moments.hpp  spherical_flux_correction.cpp  spherical_flux_correction.hpp  write_bin_ascii.cpp
tests/: CMakeLists.txt  test_attenuator.cpp  test_disort.cpp
